namespace EnvContract.DTO.Entities
{
    public class CustomerDto
    {
        public string CustomerId { get; set; }
        public string TaxCode { get; set; }
        public string CompanyName { get; set; }
        public string Address { get; set; }
        public string Representative { get; set; }
        public string ContactEmail { get; set; }
        public string PhoneNumber { get; set; }
    }
}