namespace EnvContract.DTO.Entities
{
    public class EmployeeDTO
    {
        public int Id { get; set; }
        public string FullName { get; set; }
        public string Role { get; set; } 
        public string Phone { get; set; }
    }
}