using System;

namespace EnvContract.DTO.Entities
{
    public class RegulationDTO
    {
        public string RegulationID { get; set; }
        public string Code { get; set; }
        public string Name { get; set; }
        public string EnvironmentType { get; set; }
    }
}
