using System;

namespace EnvContract.DTO.Entities
{
    public class RoleDTO
    {
        public string RoleID { get; set; }
        public string RoleCode { get; set; }
        public string RoleName { get; set; }
        public string Description { get; set; }
    }
}
