namespace EnvContract.DTO.Entities
{
    public class SampleEnvironmentDTO
    {
        public string EnvironmentID { get; set; }
        public string EnvironmentName { get; set; } 
        public string Description { get; set; }
    }
}