namespace EnvContract.DTO.Entities
{
    public class SampleLocationDTO
    {
        public string LocationID { get; set; }
        public string LocationName { get; set; }
        public string EnvironmentID { get; set; }
    }
}